Update micro settings

--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -11,14 +11,16 @@
     "cursorline": true,
     "diff": true,
     "diffgutter": false,
+    "divchars": "|-",
+    "divreverse": true,
     "encoding": "utf-8",
     "eofnewline": true,
     "fastdirty": false,
     "fileformat": "unix",
     "filetype": "unknown",
     "ftoptions": true,
-    "ignorecase": false,
-    "indentchar": " ",
+    "ignorecase": true,
+    "indentchar": "⎸",
     "infobar": true,
     "keepautoindent": false,
     "keymenu": false,
@@ -33,11 +35,11 @@
     ],
     "pluginrepos": [],
     "readonly": false,
-    "rmtrailingws": false,
+    "rmtrailingws": true,
     "ruler": true,
-    "savecursor": false,
+    "savecursor": true,
     "savehistory": true,
-    "saveundo": false,
+    "saveundo": true,
     "scrollbar": true,
     "scrollmargin": 3,
     "scrollspeed": 2,
@@ -51,9 +53,9 @@
     "statusline": true,
     "sucmd": "sudo",
     "syntax": true,
-    "tabmovement": false,
+    "tabmovement": true,
     "tabsize": 4,
-    "tabstospaces": false,
+    "tabstospaces": true,
     "useprimary": true,
     "xterm": false
 }
