--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -1,61 +1,16 @@
 {
-    "autoclose": true,
-    "autoindent": true,
-    "autosave": 0,
-    "autosu": false,
-    "backup": true,
     "basename": true,
-    "colorcolumn": 0,
-    "colorscheme": "default",
-    "comment": true,
-    "cursorline": true,
-    "diff": true,
-    "diffgutter": false,
-    "divchars": "|-",
-    "divreverse": true,
-    "encoding": "utf-8",
-    "eofnewline": true,
-    "fastdirty": false,
-    "fileformat": "unix",
-    "filetype": "unknown",
-    "ftoptions": true,
     "ignorecase": true,
     "indentchar": "⎸",
-    "infobar": true,
-    "keepautoindent": false,
-    "keymenu": false,
-    "linter": true,
-    "literate": true,
-    "matchbrace": true,
-    "mkparents": false,
-    "mouse": true,
-    "paste": false,
     "pluginchannels": [
         "https://raw.githubusercontent.com/micro-editor/plugin-channel/master/channel.json"
     ],
     "pluginrepos": [],
-    "readonly": false,
     "rmtrailingws": true,
-    "ruler": true,
     "savecursor": true,
-    "savehistory": true,
     "saveundo": true,
     "scrollbar": true,
-    "scrollmargin": 3,
-    "scrollspeed": 2,
-    "smartpaste": true,
     "softwrap": true,
-    "splitbottom": true,
-    "splitright": true,
-    "status": true,
-    "statusformatl": "$(filename) $(modified)($(line),$(col)) $(status.paste)| ft:$(opt:filetype) | $(opt:fileformat) | $(opt:encoding)",
-    "statusformatr": "$(bind:ToggleKeyMenu): bindings, $(bind:ToggleHelp): help",
-    "statusline": true,
-    "sucmd": "sudo",
-    "syntax": true,
     "tabmovement": true,
-    "tabsize": 4,
-    "tabstospaces": true,
-    "useprimary": true,
-    "xterm": false
+    "tabstospaces": true
 }
