--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -90,7 +90,7 @@ sensor:
     ## Sensor settings to be used. Leave empty/commented to use webcam default values.
     ## This can be really useful to further customize your sensor behaviour (together with backlight_regression_points).
     ## Have a look at Clightd wiki for informations: https://github.com/FedeDP/Clightd/wiki/Api#cameras-settings.
-     settings = "10094849=1,10094850=166";
+     #settings = "10094849=1,10094850=166";
 
     ## Number of frames or ALS device pollings to be captured on AC/on BATT.
     # captures = [ 5, 5 ];
