--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,13 +1,15 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
 gtk-button-images=1
-gtk-cursor-theme-name=breeze_cursors
+gtk-cursor-theme-name=Vimix-cursors
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
 gtk-fallback-icon-theme=breeze-dark
-gtk-font-name=Noto Sans Regular 10
+gtk-font-name=Noto Sans  10
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=1
-gtk-modules=appmenu-gtk-module
+gtk-modules=colorreload-gtk-module:appmenu-gtk-module
 gtk-primary-button-warps-slider=0
 gtk-shell-shows-menubar=1
 gtk-theme-name=Materia-dark
-gtk-toolbar-style=GTK_TOOLBAR_ICONS
+gtk-toolbar-style=3
