Set camera used by clight, fix trendlog module

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -85,7 +85,7 @@ sensor:
      batt_regression_points = [ 0.02, 0.09, 0.11, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
 
     ## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0)
-    # devname = "";
+     devname = "video0";
 
     ## Sensor settings to be used. Leave empty/commented to use webcam default values.
     ## This can be really useful to further customize your sensor behaviour (together with backlight_regression_points).
