Update modified files

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -3,6 +3,8 @@
 <fontconfig>
  <!-- Bedrock Linux cross-stratum fonts -->
  <dir>/bedrock/cross/fonts/</dir>
+ <!-- Bedrock Linux cross-stratum cache -->
+ <cachedir>/bedrock/var/cache/fontconfig/</cachedir>
  <match target="font">
   <edit mode="assign" name="hinting">
    <bool>true</bool>
