--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,11 +1,11 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
+gtk-application-prefer-dark-theme=false
 gtk-button-images=1
 gtk-cursor-theme-name=Vimix-cursors
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-fallback-icon-theme=breeze-dark
-gtk-font-name=Noto Sans  10
+gtk-font-name=Noto Sans Condensed Regular 10
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=1
 gtk-modules=colorreload-gtk-module:appmenu-gtk-module
