Update Gebaar config and services

--- a/.config/systemd/user/gebaard-watcher.service
+++ b/.config/systemd/user/gebaard-watcher.service
@@ -3,8 +3,4 @@ Description=Gebaar restarter
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemctl --user is-active --quiet gebaard && /usr/bin/systemctl --user restart gebaard.service
-SuccessExitStatus=0 3
-
-[Install]
-WantedBy=default.target
+ExecStart=/usr/bin/systemctl --user try-restart gebaard.service
