Update Clight config, use lat/long in same time zone

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -68,7 +68,10 @@ backlight:
     ## Uncomment to let BACKLIGHT module pause automatic calibration when laptop lid is closed.
     ## Mostly useful when laptop gets docked and thus internal webcam
     ## would not be able to correctly capture ambient brightness.
-    # pause_on_lid_closed = true;
+     pause_on_lid_closed = true;
+
+    ## Uncomment to let BACKLIGHT module fire an automatic calibration when laptop lid gets opened.
+     capture_on_lid_opened = true;
 };
 
 ###################
@@ -78,11 +81,11 @@ sensor:
 {
     ## Y points used to compute ambient_brightness while ON AC -> screen backlight curve best-fit parameters
     ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
-     ac_regression_points = [ 0.02, 0.10, 0.18, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
+     ac_regression_points = [ 0.001, 0.10, 0.19, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
 
     ## Y points used to compute ambient_brightness while ON BATTERY -> screen backlight curve best-fit parameters
     ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
-     batt_regression_points = [ 0.02, 0.09, 0.11, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
+     batt_regression_points = [ 0.001, 0.09, 0.12, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
 
     ## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0)
      devname = "video0";
@@ -90,7 +93,7 @@ sensor:
     ## Sensor settings to be used. Leave empty/commented to use webcam default values.
     ## This can be really useful to further customize your sensor behaviour (together with backlight_regression_points).
     ## Have a look at Clightd wiki for informations: https://github.com/FedeDP/Clightd/wiki/Api#cameras-settings.
-     #settings = "10094849=1,10094850=166";
+     settings = "10094849=1,10094850=166";
 
     ## Number of frames or ALS device pollings to be captured on AC/on BATT.
     # captures = [ 5, 5 ];
@@ -151,6 +154,14 @@ gamma:
     ## Note also that LOCATION is still needed to let BACKLIGHT module know current time of day.
     ## Finally, it requires BACKLIGHT module to be enabled, otherwise it gets disabled.
     # ambient_gamma = true;
+
+    ## Delay in seconds before triggering screen temperature update.
+    ## This may be needed when on laptop's resume from suspend/hibernate,
+    ## screen temp is not correctly applied, with warning in logs: "Failed to set gamma temperature."
+    ## Clight is in fact too quick to resume, and it's resuming before X;
+    ## thus failing to apply screen temperature.
+    ## By default, it is disabled (0 seconds). Max value: 30 seconds.
+     delay = 10;
 };
 
 ################
@@ -162,16 +173,16 @@ gamma:
 daytime:
 {
     ## Desired latitude for gamma support (sunrise/sunset in this location)
-    # latitude = 40.9;
+     latitude = 35.1;
 
     ## Desired longitude for gamma support (sunrise/sunset in this location)
-    # longitude = 7.16;
+     longitude = -80.94;
 
     ## Force set a sunrise time
-     sunrise = "7:00";
+    # sunrise = "7:00";
 
     ## Force set a sunset time
-     sunset = "20:30";
+    # sunset = "20:30";
 
     ## Duration of an "event". Clight will enter "event" mode (more frequent screen recalibrations)
     ## from event_duration seconds before a sunrise/sunset, until event_duration seconds after.
