Update micro config

--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -10,6 +10,7 @@
     "savecursor": true,
     "saveundo": true,
     "scrollbar": true,
+    "scrollmargin": 2,
     "softwrap": true,
     "tabmovement": true,
     "tabstospaces": true
