Use geoclue for clight as spam bug is fixed, inhibit_bl module updated to set low kbd backlight and shorter timeout during video playing

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -173,16 +173,16 @@ gamma:
 daytime:
 {
     ## Desired latitude for gamma support (sunrise/sunset in this location)
-     latitude = 35.1;
+    # latitude = 40.9;
 
     ## Desired longitude for gamma support (sunrise/sunset in this location)
-     longitude = -80.94;
+    # longitude = 7.16;
 
     ## Force set a sunrise time
     # sunrise = "7:00";
 
     ## Force set a sunset time
-    # sunset = "20:30";
+    # sunset = "10:00";
 
     ## Duration of an "event". Clight will enter "event" mode (more frequent screen recalibrations)
     ## from event_duration seconds before a sunrise/sunset, until event_duration seconds after.
