--- a/.config/gebaar/gebaard.toml
+++ b/.config/gebaar/gebaard.toml
@@ -6,6 +6,12 @@ up = "~/bin/scripts/ConvertibleLaptop/gestures/presentview --up"
 #left_down = ""
 #right_down = ""
 down = "~/bin/scripts/ConvertibleLaptop/gestures/presentview --down"
+#left = "xdotool key alt+Right"
+#right = "xdotool key alt+Left"
+
+[[swipe.commands]]
+one_shot = false
+fingers = 3
 left = "xdotool key alt+Right"
 right = "xdotool key alt+Left"
 
@@ -58,7 +64,6 @@ interact.type = "BOTH"
 
 [settings.gesture_swipe]
 threshold = 0.7
-one_shot = true
 trigger_on_release = false
 
 [settings.touch_swipe]
