Update clight conf, update inhibit module, update clight completion

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -5,7 +5,17 @@
 ## Verbose mode, useful to report bugs:
 ## run clight in verbose mode,
 ## then open issue on github attaching log
- verbose = true;
+verbose = true;
+
+## Delay in seconds before clight restarts working
+## after system is resumed from suspend/hibernation.
+## This may be needed because on some laptops on resume 
+## screen temp is not correctly applied, with warning in logs: "Failed to set gamma temperature."
+## Clight is in fact too quick to act on resume, and it is resuming before X is fully resumed;
+## thus failing to apply screen temperature.
+## By default, it is disabled (0 seconds). Max value: 30seconds.
+## Note: it requires systemd-logind (org.freedesktop.login1 dbus interface)
+# resumedelay = 0;
 
 ###################
 # INHIBITION TOOL #
@@ -81,18 +91,21 @@ sensor:
 {
     ## Y points used to compute ambient_brightness while ON AC -> screen backlight curve best-fit parameters
     ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
-     ac_regression_points = [ 0.001, 0.10, 0.19, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
+     ac_regression_points = [ 0.04, 0.10, 0.19, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
 
     ## Y points used to compute ambient_brightness while ON BATTERY -> screen backlight curve best-fit parameters
     ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
-     batt_regression_points = [ 0.001, 0.09, 0.12, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
+     batt_regression_points = [ 0.04, 0.09, 0.12, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
 
-    ## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0)
+    ## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0).
+    ## Leave this empty to let clight use first device it finds between supported ones,
+    ## ie: webcams, ambient light sensors, or custom devices.
+    ## Refer to Clightd wiki for more info: https://github.com/FedeDP/Clightd/wiki/Sensors
      devname = "video0";
 
-    ## Sensor settings to be used. Leave empty/commented to use webcam default values.
+    ## Sensor settings to be used. Leave empty/commented to use default values.
     ## This can be really useful to further customize your sensor behaviour (together with backlight_regression_points).
-    ## Have a look at Clightd wiki for informations: https://github.com/FedeDP/Clightd/wiki/Api#cameras-settings.
+    ## Have a look at Clightd wiki for more info: https://github.com/FedeDP/Clightd/wiki/Sensors#settings-string.
      settings = "10094849=1,10094850=166";
 
     ## Number of frames or ALS device pollings to be captured on AC/on BATT.
@@ -118,9 +131,6 @@ keyboard:
 ##############
 # GAMMA TOOL #
 ##############
-##########################################
-# Requires X server. Disabled otherwise. #
-##########################################
 gamma:
 {
     ## Uncomment to disable gamma tool
@@ -154,14 +164,6 @@ gamma:
     ## Note also that LOCATION is still needed to let BACKLIGHT module know current time of day.
     ## Finally, it requires BACKLIGHT module to be enabled, otherwise it gets disabled.
     # ambient_gamma = true;
-
-    ## Delay in seconds before triggering screen temperature update.
-    ## This may be needed when on laptop's resume from suspend/hibernate,
-    ## screen temp is not correctly applied, with warning in logs: "Failed to set gamma temperature."
-    ## Clight is in fact too quick to resume, and it's resuming before X;
-    ## thus failing to apply screen temperature.
-    ## By default, it is disabled (0 seconds). Max value: 30 seconds.
-     delay = 10;
 };
 
 ################
@@ -182,7 +184,7 @@ daytime:
     # sunrise = "7:00";
 
     ## Force set a sunset time
-    # sunset = "10:00";
+    # sunset = "19:00";
 
     ## Duration of an "event". Clight will enter "event" mode (more frequent screen recalibrations)
     ## from event_duration seconds before a sunrise/sunset, until event_duration seconds after.
@@ -224,9 +226,6 @@ dimmer:
 #############
 # DPMS TOOL #
 #############
-#################################################
-# Requires X server or tty. Disabled otherwise. #
-#################################################
 dpms:
 {
     ## Uncomment to disable dpms management
@@ -241,9 +240,9 @@ dpms:
 ############################
 # SCREEN COMPENSATION TOOL #
 ############################
-########################################################
-# Requires X server and BACKLIGHT. Disabled otherwise. #
-########################################################
+###########################################
+# Requires BACKLIGHT. Disabled otherwise. #
+###########################################
 screen:
 {
     ##############################################################################################################
