--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,15 +1,15 @@
 [Settings]
-gtk-application-prefer-dark-theme=false
-gtk-button-images=1
+gtk-application-prefer-dark-theme=true
+gtk-button-images=true
 gtk-cursor-theme-name=Vimix-cursors
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-fallback-icon-theme=breeze-dark
-gtk-font-name=Noto Sans Condensed Regular 10
+gtk-font-name=Noto Sans,  10
 gtk-icon-theme-name=Papirus-Dark
-gtk-menu-images=1
+gtk-menu-images=true
 gtk-modules=colorreload-gtk-module:appmenu-gtk-module
-gtk-primary-button-warps-slider=0
+gtk-primary-button-warps-slider=false
 gtk-shell-shows-menubar=1
 gtk-theme-name=Materia-dark
 gtk-toolbar-style=3
