--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,13 +2,14 @@
 gtk-application-prefer-dark-theme=true
 gtk-button-images=true
 gtk-cursor-theme-name=Vimix-cursors
+gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-fallback-icon-theme=breeze-dark
 gtk-font-name=Noto Sans,  10
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=true
-gtk-modules=colorreload-gtk-module:appmenu-gtk-module
+gtk-modules=colorreload-gtk-module:window-decorations-gtk-module:appmenu-gtk-module
 gtk-primary-button-warps-slider=false
 gtk-shell-shows-menubar=1
 gtk-theme-name=Materia-dark
