Update clight and paru conf

--- a/.config/paru/paru.conf
+++ b/.config/paru/paru.conf
@@ -23,6 +23,6 @@ UpgradeMenu
 #
 # Binary OPTIONS
 #
-[bin]
-FileManager = nnn
-FileManagerFlags = -e
+#[bin]
+#FileManager = nnn
+#FileManagerFlags = -e
