--- a/.config/systemd/user/onedrive.service
+++ b/.config/systemd/user/onedrive.service
@@ -2,9 +2,9 @@
 Description=OneDrive (rclone)
 AssertPathIsDirectory=/home/nicholas/OneDrive
 After=network-online.target
- 
+
 [Service]
-Type=simple
+Type=notify
 ExecStart=/usr/bin/rclone mount \
         --vfs-cache-mode full \
         --no-modtime \
@@ -15,6 +15,6 @@ ExecStart=/usr/bin/rclone mount \
 ExecStop=/bin/fusermount -zu /home/nicholas/OneDrive
 Restart=always
 RestartSec=10
- 
+
 [Install]
 WantedBy=default.target
