Update clight conf

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -5,7 +5,7 @@
 ## Verbose mode, useful to report bugs:
 ## run clight in verbose mode,
 ## then open issue on github attaching log
-verbose = true;
+verbose = false;
 
 ## Delay in seconds before clight restarts working
 ## after system is resumed from suspend/hibernation.
@@ -91,11 +91,11 @@ sensor:
 {
     ## Y points used to compute ambient_brightness while ON AC -> screen backlight curve best-fit parameters
     ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
-     ac_regression_points = [ 0.03, 0.10, 0.19, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
+     ac_regression_points = [ 0.001, 0.10, 0.19, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
 
     ## Y points used to compute ambient_brightness while ON BATTERY -> screen backlight curve best-fit parameters
     ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
-     batt_regression_points = [ 0.03, 0.09, 0.12, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
+     batt_regression_points = [ 0.001, 0.09, 0.12, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
 
     ## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0).
     ## Leave this empty to let clight use first device it finds between supported ones,
@@ -265,7 +265,7 @@ screen:
     ## in the corresponding AC state.
     ## Disabled by default on BATT because it is quite an heavy operation,
     ## as it has to take a snapshot of your X desktop and compute its brightness.
-    # timeouts = [ 30, -1 ];
+     timeouts = [ 60, -1 ];
 
     ## How much does your screen-emitted brightness affect
     ## ambient brightness, in your setup, in percentage.
