Update inhibit module to use new keyboard api, update clight settings

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -121,6 +121,11 @@ keyboard:
     ## It is automatically disabled anyway where not available.
     # disabled = true;
 
+    ## Timeouts on AC/on BATT for keyboard auto dimming.
+    ## Set any of these to <= 0 to disable kbd backlight
+    ## in the corresponding AC state.
+     timeouts = [ 10, 10 ];
+
     ## Uncomment to switch off keyboard on dimming/dpms.
     # dim = true;
 
