--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -6,12 +6,12 @@
  <!-- Bedrock Linux cross-stratum cache -->
  <cachedir>/bedrock/var/cache/fontconfig/</cachedir>
  <match target="font">
-  <edit name="hinting" mode="assign">
+  <edit mode="assign" name="hinting">
    <bool>true</bool>
   </edit>
  </match>
  <match target="font">
-  <edit name="hintstyle" mode="assign">
+  <edit mode="assign" name="hintstyle">
    <const>hintslight</const>
   </edit>
  </match>
