--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -6,7 +6,7 @@ gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-fallback-icon-theme=breeze-dark
-gtk-font-name=Noto Sans,  10
+gtk-font-name=Inter,  10
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=true
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module:appmenu-gtk-module
