Update config files

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -5,7 +5,7 @@
 ## Verbose mode, useful to report bugs:
 ## run clight in verbose mode,
 ## then open issue on github attaching log
-verbose = false;
+verbose = true;
 
 ## Delay in seconds before clight restarts working
 ## after system is resumed from suspend/hibernation.
@@ -24,6 +24,9 @@ verbose = false;
 ########################################################
 inhibit:
 {
+    ## Uncomment to disable
+    # disabled = true;
+
     ## Uncomment to let Clight manage "Docked" laptop state
     ## as an inhibition (pausing DPMS and dimmer).
     ## Note that "Docked" state is only checked when
@@ -34,6 +37,12 @@ inhibit:
     ## suppressing org.freedesktop.PowerManagement too
     ## (ie: preventing your laptop to suspend/hibernate)
     # inhibit_pm = true;
+
+    ## Uncomment to let Clight pause backlight module
+    ## while any inhibition is active;
+    ## this is useful eg: to pause backlight calibration
+    ## while watching a movie.
+    # inhibit_bl = true;
 };
 
 ##############################
@@ -89,12 +98,11 @@ backlight:
 ###################
 sensor:
 {
-    ## Y points used to compute ambient_brightness while ON AC -> screen backlight curve best-fit parameters
-    ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
+    ## Curves used to match ambient brightness to backlight level for each AC state.
+    ## X axis: ambient brightness values (from 0 to 10)
+    ## Y axis: desired backlight level for corresponding ambient brightness.
+    ## Note: the array can be expanded up to 50 points for finer granularity.
      ac_regression_points = [ 0.001, 0.10, 0.19, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
-
-    ## Y points used to compute ambient_brightness while ON BATTERY -> screen backlight curve best-fit parameters
-    ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
      batt_regression_points = [ 0.001, 0.09, 0.12, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
 
     ## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0).
@@ -111,6 +119,41 @@ sensor:
     ## Number of frames or ALS device pollings to be captured on AC/on BATT.
     # captures = [ 5, 5 ];
 };
+
+## Curves used to match reference backlight level (computed through sensor.regression_points curves),
+## to backlight level for each AC state for specific monitors.
+## This allows per-monitor backlight adjustment; it means eg:
+## that a 0.7 backlight level for your internal laptop monitor,
+## can be mapped to 0.8 backlight level for your external monitor.
+## It is mostly useful for people with internal laptop + external monitors or multiple external monitors,
+## as often their backlight level will not properly match (ie: a 50% level on internal laptop can be much brighter than external monitor).
+## All monitors not specified below will use default reference values (specified by sensor.regression_points curves).
+## X axis: default backlight level (from 0 to 10)
+## Y axis: desired backlight level adjusted for specific monitor.
+## Note: arrays can be expanded up to 50 points for finer granularity.
+## Customize "intel_backlight" or "acpi_video0" or whatever using your monitors IDs.
+## To find monitor IDs, use Clightd:
+## busctl call org.clightd.clightd /org/clightd/clightd/Backlight org.clightd.clightd.Backlight GetAll "s" ""
+##
+## You might ask why using a backlight-to-backlight mapping for specific monitors, instead of using
+## multiple ambient_brightness-to-backlight mapping curves; fact is that this way Clight is also able to
+## set correct backlight for each monitor even when just asked to set the backlight, ie:
+## when the request comes from eg: dbus API asking for a certain backlight level (IncBl, DecBl dbus methods).
+## In this case, we wouldn't have an "ambient brightess" to be used to compute correct backlight level on each monitor;
+## instead, we just set the requested backlight as default, and adjust to it for each monitor specified here below.
+monitor_override:
+(
+    {
+         monitor_id = "TAUAA0018521"
+         ac_regression_points = [ 0.0, 0.12, 0.21, 0.27, 0.42, 0.65, 0.80, 0.89, 0.94, 0.97, 1.0 ];
+        # batt_regression_points =  [ 0.0, 0.15, 0.29, 0.45, 0.61, 0.74, 0.81, 0.88, 0.93, 0.97, 1.0 ];
+    },
+    {
+        # monitor_id = "acpi_video0"
+        # ac_regression_points = [ 0.0, 0.18, 0.22, 0.33, 0.55, 0.64, 0.71, 0.80, 0.90, 0.97, 1.0 ];
+        # batt_regression_points =  [ 0.0, 0.15, 0.29, 0.45, 0.61, 0.74, 0.81, 0.88, 0.93, 0.97, 1.0 ];
+    }
+);
 
 ##############################
 # KEYBOARD BACKLIGHT TOOL    #
@@ -129,7 +172,9 @@ keyboard:
     ## Uncomment to switch off keyboard on dimming/dpms.
     # dim = true;
 
-    ## Threshold above which keyboard backlight is switched off
+    ## Backlight threshold above which keyboard backlight is switched off.
+    ## Note that, even if name suggests it uses ambient brightness,
+    ## it does indeed use backlight as threshold, thus following backlight curve.
      ambient_br_thresh = 0.9;
 };
 
