--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -9,13 +9,13 @@ verbose = true;
 
 ## Delay in seconds before clight restarts working
 ## after system is resumed from suspend/hibernation.
-## This may be needed because on some laptops on resume
+## This may be needed because on some laptops on resume 
 ## screen temp is not correctly applied, with warning in logs: "Failed to set gamma temperature."
 ## Clight is in fact too quick to act on resume, and it is resuming before X is fully resumed;
 ## thus failing to apply screen temperature.
 ## By default, it is disabled (0 seconds). Max value: 30seconds.
 ## Note: it requires systemd-logind (org.freedesktop.login1 dbus interface)
-# resumedelay = 0;
+ resumedelay = 3;
 
 ###################
 # INHIBITION TOOL #
@@ -52,6 +52,9 @@ backlight:
 {
     ## Uncomment to disable
     # disabled = true;
+    
+    ## Uncomment to restore screen backlight on exit
+    # restore_on_exit = true;
 
     ## Uncomment to disable smooth transitions
     # no_smooth_transition = true;
@@ -114,9 +117,10 @@ sensor:
     ## Sensor settings to be used. Leave empty/commented to use default values.
     ## This can be really useful to further customize your sensor behaviour (together with backlight_regression_points).
     ## Have a look at Clightd wiki for more info: https://github.com/FedeDP/Clightd/wiki/Sensors#settings-string.
-     settings = "10094849=1,10094850=500";
+     settings = "10094849=1,10094850=900";
 
     ## Number of frames or ALS device pollings to be captured on AC/on BATT.
+    ## Must be between 1 and 20.
     # captures = [ 5, 5 ];
 };
 
@@ -136,7 +140,7 @@ sensor:
 ## busctl call org.clightd.clightd /org/clightd/clightd/Backlight org.clightd.clightd.Backlight GetAll "s" ""
 ##
 ## You might ask why using a backlight-to-backlight mapping for specific monitors, instead of using
-## multiple ambient_brightness-to-backlight mapping curves; fact is that this way Clight is also able to
+## multiple ambient_brightness-to-backlight mapping curves; fact is that this way Clight is also able to 
 ## set correct backlight for each monitor even when just asked to set the backlight, ie:
 ## when the request comes from eg: dbus API asking for a certain backlight level (IncBl, DecBl dbus methods).
 ## In this case, we wouldn't have an "ambient brightess" to be used to compute correct backlight level on each monitor;
@@ -145,7 +149,7 @@ monitor_override:
 (
     {
          monitor_id = "TAUAA0018521"
-         ac_regression_points = [ 0.0, 0.12, 0.21, 0.27, 0.42, 0.65, 0.80, 0.89, 0.94, 0.97, 1.0 ];
+         ac_regression_points = [ 0.0, 0.12, 0.31, 0.47, 0.52, 0.65, 0.80, 0.89, 0.94, 0.97, 1.0 ];
         # batt_regression_points =  [ 0.0, 0.15, 0.29, 0.45, 0.61, 0.74, 0.81, 0.88, 0.93, 0.97, 1.0 ];
     },
     {
@@ -168,14 +172,19 @@ keyboard:
     ## Set any of these to <= 0 to disable kbd backlight
     ## in the corresponding AC state.
      timeouts = [ 10, 10 ];
+    
+    ## Curves used to match ambient brightness to keyboard backlight level for each AC state.
+    ## X axis: ambient brightness values (from 0 to 10)
+    ## Y axis: desired backlight level for corresponding ambient brightness.
+    ## Note: the array can be expanded up to 50 points for finer granularity.  
+    ## Note also that most keyboard offers only 3 backlight levels (off, mid, high).
+    ## Default curves are same as default backlight curves but upside down 
+    ## (ie: the lower the ambient brightness, the higer the keyboard backlight).
+     ac_regression_points = [ 1.0, 0.97, 0.93, 0.88, 0.81, 0.74, 0.61, 0.45, 0.29, 0.15, 0.0 ];
+     batt_regression_points = [ 0.80, 0.78, 0.75, 0.71, 0.65, 0.59, 0.52, 0.36, 0.23, 0.15, 0.0 ];
 
     ## Uncomment to switch off keyboard on dimming/dpms.
     # dim = true;
-
-    ## Backlight threshold above which keyboard backlight is switched off.
-    ## Note that, even if name suggests it uses ambient brightness,
-    ## it does indeed use backlight as threshold, thus following backlight curve.
-     ambient_br_thresh = 0.9;
 };
 
 ##############
@@ -185,6 +194,9 @@ gamma:
 {
     ## Uncomment to disable gamma tool
     # disabled = true;
+    
+    ## Uncomment to restore screen temperature on exit
+    # restore_on_exit = true;
 
     ## Uncomment to disable gamma smooth transitions
     # no_smooth_transition = true;
