--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -193,7 +193,7 @@ keyboard:
 gamma:
 {
     ## Uncomment to disable gamma tool
-    # disabled = true;
+     disabled = true;
     
     ## Uncomment to restore screen temperature on exit
     # restore_on_exit = true;
@@ -262,7 +262,7 @@ daytime:
 dimmer:
 {
     ## Uncomment to disable dimmer tool
-    # disabled = true;
+     disabled = true;
 
     ## Uncomment to disable smooth transitions
     ## when entering/leaving dimmed state
@@ -296,7 +296,9 @@ dpms:
     ## Timeouts on AC/on BATT.
     ## Set any of these to <= 0 to disable dpms
     ## in the corresponding AC state.
-     timeouts = [ 2700, 900 ];
+    # timeouts = [ 2700, 900 ];
+    # Let kde handle it for now
+    timeouts = [ -1, -1];
 };
 
 ############################
@@ -320,7 +322,7 @@ screen:
     ##############################################################################################################
 
     ## Uncomment to disable screen-emitted brightness compensation support
-    # disabled = true;
+     disabled = true;
 
     ## Screen timeouts on AC/on BATT.
     ## Set any of these to <= 0 to disable screen-emitted brightness compensation
