--- a/.config/psd/psd.conf
+++ b/.config/psd/psd.conf
@@ -1,7 +1,7 @@
 #
 # $XDG_CONFIG_HOME/psd/psd.conf
 #
-# For documentation, refer to the psd man page or the wiki page
+# For documentation, refer man 1 psd or to the wiki page
 # https://wiki.archlinux.org/index.php/Profile-sync-daemon
 
 ## NOTE the following:
@@ -10,13 +10,18 @@
 
 # Uncomment and set to "yes" to use overlayfs instead of a full copy to reduce
 # the memory costs and to improve sync/unsync operations. Note that your kernel
-# MUST have this module available in order to use this mode
+# MUST have this module available in order to use this mode.
 #
 USE_OVERLAYFS="yes"
 
-# List browsers separated by spaces to include in the sync. Useful if you do not
-# wish to have all possible browser profiles sync'ed which is the default if
-# this variable is left commented.
+# Uncomment and set to "yes" to resync on suspend to reduce potential data loss.
+# Note that your system MUST have gdbus from glib2 installed to use this mode.
+#
+USE_SUSPSYNC="yes"
+
+# List any browsers in the array below to have managed by psd. Useful if you do
+# not wish to have all possible browser profiles managed which is the default if
+# this array is left commented.
 #
 # Possible values:
 #  chromium
@@ -48,7 +53,7 @@ USE_OVERLAYFS="yes"
 #  vivaldi
 #  vivaldi-snapshot
 #
-BROWSERS="firefox"
+BROWSERS=(firefox)
 
 # Uncomment and set to "no" to completely disable the crash recovery feature.
 #
@@ -59,7 +64,7 @@ BROWSERS="firefox"
 #USE_BACKUPS="yes"
 
 # Uncomment and set to an integer that is the maximum number of crash recovery
-# snapshots to keep (the oldest ones are delete first).
+# snapshots to keep (the oldest ones are deleted first).
 #
 # The default is to save the most recent 5 crash recovery snapshots.
-#BACKUP_LIMIT=5
+BACKUP_LIMIT=2
