--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -5,7 +5,7 @@
 ## Verbose mode, useful to report bugs:
 ## run clight in verbose mode,
 ## then open issue on github attaching log
-verbose = true;
+# verbose = true;
 
 ## Delay in seconds before clight restarts working
 ## after system is resumed from suspend/hibernation.
@@ -15,7 +15,7 @@ verbose = true;
 ## thus failing to apply screen temperature.
 ## By default, it is disabled (0 seconds). Max value: 30seconds.
 ## Note: it requires systemd-logind (org.freedesktop.login1 dbus interface)
- resumedelay = 3;
+ resumedelay = 1;
 
 ###################
 # INHIBITION TOOL #
@@ -64,6 +64,10 @@ backlight:
 
     ## Transition timeout in ms
     # trans_timeout = 30;
+    
+    ## When > 0, use a fixed transition duration (in ms),
+    ## overriding trans_timeout and trans_step configs.
+    # trans_fixed = 1000;
 
     ## Timeouts between captures during day/night/event on AC
     ## Set any of these to <= 0 to disable captures
@@ -74,9 +78,6 @@ backlight:
     ## Set any of these to <= 0 to disable captures
     ## in the corresponding day time.
      batt_timeouts = [ 1800, 5400, 600 ];
-
-    ## Screen syspath to be use
-    # screen_sysname = "intel_backlight";
 
     ## Set a threshold: if detected ambient brightness is below this threshold,
     ## capture will be discarded and no backlight change will be made.
@@ -184,7 +185,7 @@ keyboard:
      batt_regression_points = [ 0.80, 0.78, 0.75, 0.71, 0.65, 0.59, 0.52, 0.36, 0.23, 0.15, 0.0 ];
 
     ## Uncomment to switch off keyboard on dimming/dpms.
-    # dim = true;
+     dim = true;
 };
 
 ##############
@@ -251,6 +252,18 @@ daytime:
     ## Duration of an "event". Clight will enter "event" mode (more frequent screen recalibrations)
     ## from event_duration seconds before a sunrise/sunset, until event_duration seconds after.
     # event_duration = 1800;
+    
+    ## Set an offset in seconds from sunrise;
+    ## eg: a value of 600 would force Clight to manage sunrise event
+    ## 10 minutes after the real event.
+    ## You can use negative values too.
+    sunrise_offset = 30;
+    
+    ## Set an offset in seconds from sunset;
+    ## eg: a value of 600 would force Clight to manage sunset event
+    ## 10 minutes after the real event.
+    ## You can use negative values too.
+    # sunset_offset = 0;
 };
 
 ###############
@@ -275,6 +288,10 @@ dimmer:
     ## Transition timeout in ms.
     ## Entering dimmed state fade, and leaving fade
     # trans_timeouts = [ 30, 30 ];
+    
+    ## When > 0, use a fixed transition duration (in ms), 
+    ## for enter or leave, overriding trans_timeouts and trans_steps configs.
+     trans_fixed = [ 1000, 1000 ];
 
     ## Timeouts on AC/on BATT.
     ## Set any of these to <= 0 to disable dimmer
