--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -185,7 +185,7 @@ keyboard:
      batt_regression_points = [ 0.80, 0.78, 0.75, 0.71, 0.65, 0.59, 0.52, 0.36, 0.23, 0.15, 0.0 ];
 
     ## Uncomment to switch off keyboard on dimming/dpms.
-     dim = true;
+    # dim = true;
 };
 
 ##############
@@ -212,7 +212,7 @@ gamma:
      temp = [ 6500, 4200 ];
 
     ## Enable to let GAMMA smooth transitions last (2 * event_duration),
-    ## in a redshift-like way.
+    ## in a redshift-like way. 
     ## When enabling this, transition steps and timeouts are automatically computed
     ## given DAY-NIGHT temperature difference and (2 * event_duration) duration.
     ##
@@ -257,7 +257,7 @@ daytime:
     ## eg: a value of 600 would force Clight to manage sunrise event
     ## 10 minutes after the real event.
     ## You can use negative values too.
-    sunrise_offset = 30;
+    sunrise_offset = 120;
     
     ## Set an offset in seconds from sunset;
     ## eg: a value of 600 would force Clight to manage sunset event
@@ -308,14 +308,12 @@ dimmer:
 dpms:
 {
     ## Uncomment to disable dpms management
-    # disabled = true;
+     disabled = true;
 
     ## Timeouts on AC/on BATT.
     ## Set any of these to <= 0 to disable dpms
     ## in the corresponding AC state.
-    # timeouts = [ 2700, 900 ];
-    # Let kde handle it for now
-    timeouts = [ -1, -1];
+     timeouts = [ 2700, 900 ];
 };
 
 ############################
@@ -339,7 +337,7 @@ screen:
     ##############################################################################################################
 
     ## Uncomment to disable screen-emitted brightness compensation support
-     disabled = true;
+    # disabled = true;
 
     ## Screen timeouts on AC/on BATT.
     ## Set any of these to <= 0 to disable screen-emitted brightness compensation
