--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -5,11 +5,11 @@ gtk-cursor-theme-name=Vimix-cursors
 gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
-gtk-font-name=Noto Sans,  10
+gtk-font-name=Inter,  10
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=true
-gtk-modules=colorreload-gtk-module:appmenu-gtk-module
+gtk-modules=colorreload-gtk-module:window-decorations-gtk-module:appmenu-gtk-module
 gtk-primary-button-warps-slider=false
 gtk-shell-shows-menubar=1
-gtk-theme-name=Materia-dark
+gtk-theme-name=Materia-dark-compact
 gtk-toolbar-style=3
