--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -8,8 +8,8 @@ gtk-enable-animations=true
 gtk-font-name=Inter,  10
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=true
-gtk-modules=colorreload-gtk-module:window-decorations-gtk-module:appmenu-gtk-module
+gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
 gtk-primary-button-warps-slider=false
-gtk-shell-shows-menubar=1
 gtk-theme-name=Materia-dark-compact
 gtk-toolbar-style=3
+gtk-xft-dpi=98304
