--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -26,19 +26,19 @@ inhibit:
 {
     ## Uncomment to disable
     # disabled = true;
-
+    
     ## Uncomment to let Clight manage "Docked" laptop state
     ## as an inhibition (pausing DPMS and dimmer).
     ## Note that "Docked" state is only checked when
     ## laptop lid is closed or opened.
     # inhibit_docked = true;
-
+    
     ## Uncomment to let Clight manage inhibition requests
     ## suppressing org.freedesktop.PowerManagement too
     ## (ie: preventing your laptop to suspend/hibernate)
     # inhibit_pm = true;
-
-    ## Uncomment to let Clight pause backlight module
+    
+    ## Uncomment to let Clight pause backlight and screen modules
     ## while any inhibition is active;
     ## this is useful eg: to pause backlight calibration
     ## while watching a movie.
@@ -95,6 +95,13 @@ backlight:
 
     ## Uncomment to let BACKLIGHT module fire an automatic calibration when laptop lid gets opened.
      capture_on_lid_opened = true;
+    
+    ## Uncomment to set a delay before GAMMA and BACKLIGHT get synced
+    ## whenever a monitor is added/removed.
+    ## Similarly to "resumedelay", some monitors are slow to become active,
+    ## therefore a small delay is needed.
+    ## By default, it is disabled (0 seconds). Max value: 10seconds.
+    # hotplug_delay = 5;
 };
 
 ###################
@@ -118,6 +125,7 @@ sensor:
     ## Sensor settings to be used. Leave empty/commented to use default values.
     ## This can be really useful to further customize your sensor behaviour (together with backlight_regression_points).
     ## Have a look at Clightd wiki for more info: https://github.com/FedeDP/Clightd/wiki/Sensors#settings-string.
+    ## Example for Camera sensor, to set a manual exposure -> "10094849=1,10094850=166";
      settings = "10094849=1,10094850=900";
 
     ## Number of frames or ALS device pollings to be captured on AC/on BATT.
@@ -168,7 +176,7 @@ keyboard:
     ## Uncomment to disable keyboard automatic calibration.
     ## It is automatically disabled anyway where not available.
     # disabled = true;
-
+    
     ## Timeouts on AC/on BATT for keyboard auto dimming.
     ## Set any of these to <= 0 to disable kbd backlight
     ## in the corresponding AC state.
@@ -180,7 +188,7 @@ keyboard:
     ## Note: the array can be expanded up to 50 points for finer granularity.  
     ## Note also that most keyboard offers only 3 backlight levels (off, mid, high).
     ## Default curves are same as default backlight curves but upside down 
-    ## (ie: the lower the screen backlight, the higer the keyboard backlight).
+    ## (ie: the lower the screen backlight, the higher the keyboard backlight).
      ac_regression_points = [ 1.0, 0.97, 0.93, 0.88, 0.81, 0.74, 0.61, 0.45, 0.29, 0.15, 0.0 ];
      batt_regression_points = [ 0.80, 0.78, 0.75, 0.71, 0.65, 0.59, 0.52, 0.36, 0.23, 0.15, 0.0 ];
 };
